--- a/src/theme/DocCategoryGeneratedIndexPage/styles.module.css
+++ b/src/theme/DocCategoryGeneratedIndexPage/styles.module.css
@@ -178,7 +178,7 @@
 @media (max-width: 430px) {
     .contentWrapper,
     .mainContent {
-        max-w-width: 100vw;
+        max-width: 100vw;
         padding: 0 1px;
         gap: var(--spacing-xs);
     }
